Agregando estilos a la classe nueva del div para agregar el telon de fondo en todas as paginas de uestra aplicacion , para eso eclaraos la clase .backdrop{ position: fixed; display:none; top:0; left:0; z-index:100; width:100%; height:100% y una background;}

--- a/Css/shared.css
+++ b/Css/shared.css
@@ -4,11 +4,36 @@
 }
 
 
+
+
+
+
 /* body */
 body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
 }
+
+
+
+
+
+/* Para agregar un telon de fondo transparente en el div con la classe backdrop */
+.backdrop{
+    position: fixed;
+    display: none;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);    
+}
+
+
+
+
+
 
 
 
